<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/grayBG"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/nav_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:layout_alignParentTop="true">


                <TextView
                    android:id="@+id/logo_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:paddingRight="5dp"
                    android:shadowColor="@color/greenDark"
                    android:shadowDx="4.0"
                    android:shadowRadius="3.0"
                    android:text="SOOJOOB"
                    android:textColor="@color/green"
                    android:textSize="40sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/welcome_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="환영합니다!"
                    android:textColor="@color/greenTxt"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="이메일 주소로 로그인 하시거나"
                    android:textColor="@color/grayTxt"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SNS 계정으로 간편하게 로그인 하세요."
                    android:textColor="@color/grayTxt"
                    android:textSize="16sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <TextView
                android:id="@+id/email_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/email"
                android:textColor="@color/greenTxt"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_textview" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_text_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp"
                app:counterEnabled="true"
                app:counterMaxLength="40"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_textview">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextLabel" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/password_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/password"
                android:textColor="@color/greenTxt"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_text_input_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp"
                app:counterEnabled="true"
                app:counterMaxLength="16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_textview"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textAppearance="@style/TextLabel" />
            </com.google.android.material.textfield.TextInputLayout>

            <android.widget.Button
                android:id="@+id/next_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginVertical="30dp"
                android:layout_marginHorizontal="10dp"
                android:layout_gravity="center"
                android:text="@string/login"
                android:textSize="20sp"
                android:textColor="@color/whiteTxt"
                android:textStyle="bold"
                android:background="@drawable/round_bluebutton"
                android:backgroundTint="@color/green"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sns_signup"
                android:layout_marginVertical="10dp"
                android:textColor="@color/grayTxt"
                android:textSize="16sp"
                android:textStyle="normal" />


            <LinearLayout
                android:id="@+id/google_login"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/round"
                android:backgroundTint="#D4F4FA"
                android:gravity="center"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/google_logo" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/next_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="계정이 없으신가요?"
                    android:textColor="@color/grayTxt"
                    android:textSize="16sp"
                    android:textStyle="normal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/next_signup"
                    android:textColor="@color/grayTxt"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>




</LinearLayout>