<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayBG"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/nav_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginVertical="15dp"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/back_signup"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_left" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/welcome_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="회원정보 수정"
                    android:textColor="@color/greenTxt"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="자세한 회원정보를 입력하시면"
                    android:textColor="@color/grayTxt"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="더 다양한 서비스를 이용 할 수 있습니다."
                    android:textColor="@color/grayTxt"
                    android:textSize="16sp"/>
            </LinearLayout>


            <TextView
                android:id="@+id/username_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/username"
                android:textColor="@color/greenTxt"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_text_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextLabel"/>
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/email_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/email"
                android:textColor="@color/greenTxt"
                android:textSize="15sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_text_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:textAppearance="@style/TextLabel" />
            </com.google.android.material.textfield.TextInputLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/age_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        tools:layout_marginStart="10dp"
                        android:text="@string/age"
                        android:textColor="@color/greenTxt"
                        android:textSize="15sp"
                        android:textStyle="bold"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/age_text_input_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="5dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/age_text_input_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextLabel"
                            android:inputType="number"/>

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/region_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/region"
                        android:textColor="@color/greenTxt"
                        android:textSize="15sp"
                        android:textStyle="bold"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/region_text_input_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="5dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/region_text_input_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextLabel"/>
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </LinearLayout>



            <LinearLayout
                android:id="@+id/btnLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <android.widget.Button
                    android:id="@+id/btn_pw"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:background="@drawable/round_wbutton"
                    android:backgroundTint="#EDA900"
                    android:text="비밀번호 변경"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_weight="1"/>

                <android.widget.Button
                    android:id="@+id/tv_user_delete"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:background="@drawable/round_wbutton"
                    android:backgroundTint="@color/grayBT"
                    android:text="회원 탈퇴"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_weight="1"/>

            </LinearLayout>


            <android.widget.Button
                android:id="@+id/next_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/round_wbutton"
                android:backgroundTint="@color/green"
                android:text="@string/user_update"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>